--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 			<p style="text-align: center;width: 90%;">Flocking simulation visualizer. Press anywhere on the screen to create a <b style="color:lightgreen;">bot</b>. Multiple bots will flock to eachother. You can also create <b style="color:red;">Hunters</b> by pressing "Flee Mouse" and clicking on the canvas. Read more about Flocking <a style="color:lightblue;" href="https://en.wikipedia.org/wiki/Flocking_(behavior)" target="_blank">HERE</a>.</p>
 	    </div>
 	    <script src="Main.js"></script>
+	    <script src="Bot.js"></script>
+	    <script src="TeamBot.js"></script>
 
 	</div>
 </div>
