added folder doc

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Flocking Simulation</title>
 	<link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="src/style.css">
 	<link rel="stylesheet" media="screen and (device-height: 600px)"/>
 </head>
 
@@ -40,9 +40,9 @@
 			</ul>
 			<p style="text-align: center;width: 90%;">Flocking simulation visualizer. Press anywhere on the screen to create a <b style="color:lightgreen;">bot</b>. Multiple bots will flock to eachother. You can also create <b style="color:red;">Hunters</b> by pressing "Flee Mouse" and clicking on the canvas. Read more about Flocking <a style="color:lightblue;" href="https://en.wikipedia.org/wiki/Flocking_(behavior)" target="_blank">HERE</a>.</p>
 	    </div>
-	    <script src="Main.js"></script>
-	    <script src="Bot.js"></script>
-	    <script src="TeamBot.js"></script>
+	    <script src="src/Main.js"></script>
+	    <script src="src/Bot.js"></script>
+	    <script src="src/TeamBot.js"></script>
 
 	</div>
 </div>
