--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<li><button id="fleem" class="button" onclick="activateFleeMouse()">Flee Mouse</button></li>
 				<li><button id="formationMouse" class="button" onclick="activateFormation()">Formation</button></li>
 				<li><button id="detailsMouse" class="button" onclick="activateDetails()">Show Details</button></li>
-				<!-- <li><button id="resizeMouse" class="button" onclick="activateResize()">Resize Canvas</button></li> -->
+				<li><button id="resizeMouse" class="button" onclick="activateResize()">Hide Body</button></li>
 				<li><button id="resetButton" class="button" onclick="clearScreen();">Reset</button></li>
 			</ul>
 			<p style="text-align: center;width: 90%;">Flocking simulation visualizer. Press anywhere on the screen to create a <b style="color:lightgreen;">bot</b>. Multiple bots will flock to eachother. You can also create <b style="color:red;">Hunters</b> by pressing "Flee Mouse" and clicking on the canvas. Read more about Flocking <a style="color:lightblue;" href="https://en.wikipedia.org/wiki/Flocking_(behavior)" target="_blank">HERE</a>.</p>
